--- a/source/app/templates/index.html
+++ b/source/app/templates/index.html
@@ -46,7 +46,7 @@
         const imageInput = document.getElementById('imageInput');
         const responseArea = document.getElementById('response-area');
 
-        const API_URL = '/predict';
+        const API_URL = '/api/predict';
 
         function sanitizeHTML(str) {
             const temp = document.createElement('div');
